# StockPrediction

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: current.csv  reference.csv
infra/: main.tf  outputs.tf  terraform.tfstate.backup  variables.tf  versions.tf
infra/environments/dev/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/: outputs.tf  variables.tf
services/airflow/: Dockerfile  entrypoint.sh  requirements.txt
services/api/: Dockerfile  app.py  requirements.txt
services/api/api/: app.py
services/api/routers/: predictions.py
services/evidently/: Dockerfile  app.py  monitor.py  report.html  requirements.txt
services/mlflow/: entrypoint.sh  requirements.txt  test_mlflow.py
services/streamlit/: app.py  requirements.txt
src/data/ingestion/: fetch_sp500.py
src/pipelines/training/: train_sp500_model.py
stock-advisor-mlops/: .secrets.baseline  README.md
stock-advisor-mlops/.github/workflows/: ci.yml
stock-advisor-mlops/infrastructure/terraform/: main.tf
stock-advisor-mlops/mlflow_data/: mlflow.db
stock-advisor-mlops/services/evidently/: config.yaml
stock-advisor-mlops/services/mlflow/: Dockerfile
stock-advisor-mlops/services/streamlit/: Dockerfile  requirements.txt
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: conftest.py
tests/fixtures/: mock_responses.py  sample_data.py
tests/unit/test_api/: test_predictions.py
tests/unit/test_data/: test_dag_structure.py
tests/unit/test_models/: test_train.py  (+3 more)
(+18 files in other folders)
