[tool.poetry]
name = "stock-advisor-mlops"
version = "0.1.0"
description = "MLOps pipeline for stock trend prediction and model deployment"
authors = ["Hernan Viscarra <hsviscarra@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.7.0"
pandas = "^2.3.1"
numpy = "^1.26.4"
mlflow = "^3.1.1"
xgboost = "^3.0.2"
evidently = "^0.7.10"
pandas-datareader = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pre-commit = "^3.0"
black = "^24.0"
flake8 = "^7.0"
isort = "^5.12"
autopep8 = "^2.3.2"
autoflake = "^2.3.1"
detect-secrets = "^1.5.0"
apache-airflow = "^3.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

